menu overlap with h1 fix

--- a/styles.css
+++ b/styles.css
@@ -154,7 +154,7 @@ li {
     position: absolute;
     top: 100%;
     left: 0;
-    z-index: 1;
+    z-index: 5;
     padding: 12px 24px;
     margin-top: 0;
     margin-left: -12px;
